fix(layout): fix main width (fix overflow)

--- a/src/app/layout/main/main.css
+++ b/src/app/layout/main/main.css
@@ -1,6 +1,6 @@
 .main-container {
 	display: flex;
-	width: 100vw;
+	width: 99.8vw;
 	min-height: 60vh;
 	padding: 0.1vh 0.1vw;
 }
